crates/lang/macro/tests/ui/trait_def/fail/message_input_non_codec.stderr
error[E0277]: the trait bound `NonCodec: WrapperTypeDecode` is not satisfied
  --> $DIR/message_input_non_codec.rs:8:23
   |
8  |     fn message(&self, input: NonCodec);
   |                       ^^^^^^^^^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodec`
   |
   = note: required because of the requirements on the impl of `parity_scale_codec::Decode` for `NonCodec`
note: required by a bound in `DispatchInput`
  --> $DIR/type_check.rs:41:8
   |
41 |     T: scale::Decode + 'static;
   |        ^^^^^^^^^^^^^ required by this bound in `DispatchInput`

error[E0277]: the trait bound `NonCodec: WrapperTypeEncode` is not satisfied
 --> $DIR/message_input_non_codec.rs:5:1
  |
5 |   #[ink::trait_definition]
  |   ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonCodec`
6 |   pub trait TraitDefinition {
7 | /     #[ink(message)]
8 | |     fn message(&self, input: NonCodec);
  | |_______________________________________- required by a bound introduced by this call
  |
  = note: required because of the requirements on the impl of `Encode` for `NonCodec`
  = note: this error originates in the attribute macro `ink::trait_definition` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `fire` exists for struct `CallBuilder<E, Set<<E as Environment>::AccountId>, Unset<u64>, Unset<<E as Environment>::Balance>, Set<ExecutionInput<ArgumentList<ink_env::call::utils::Argument<NonCodec>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>>>, Set<()>>`, but its trait bounds were not satisfied
  --> $DIR/message_input_non_codec.rs:7:5
   |
7  | /     #[ink(message)]
8  | |     fn message(&self, input: NonCodec);
   | |_______________________________________^ method cannot be called on `CallBuilder<E, Set<<E as Environment>::AccountId>, Unset<u64>, Unset<<E as Environment>::Balance>, Set<ExecutionInput<ArgumentList<ink_env::call::utils::Argument<NonCodec>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>>>, Set<()>>` due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/crates/env/src/call/execution_input.rs
   |
   |   pub struct ArgumentList<Head, Rest> {
   |   ----------------------------------- doesn't satisfy `_: Encode`
   |
   = note: the following trait bounds were not satisfied:
           `ArgumentList<ink_env::call::utils::Argument<NonCodec>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>: Encode`
